--- a/clothing-store/package.json
+++ b/clothing-store/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/fiber": "^8.17.10",
     "@types/react-slick": "^0.23.13",
     "axios": "^1.7.7",
     "react": "^18.3.1",
@@ -17,6 +18,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
     "react-slick": "^0.30.2",
+    "react-three-fiber": "^6.0.13",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.1.14",
     "three": "^0.170.0"
@@ -28,9 +30,12 @@
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "@typescript-eslint/parser": "^7.13.1",
     "@vitejs/plugin-react-swc": "^3.5.0",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.16",
     "typescript": "^5.2.2",
     "vite": "^5.3.1"
   }
