--- a/clothing-store/package.json
+++ b/clothing-store/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-spring/three": "^9.7.5",
+    "@react-three/drei": "^9.120.3",
     "@react-three/fiber": "^8.17.10",
     "@types/react-slick": "^0.23.13",
     "axios": "^1.7.7",
@@ -34,6 +36,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "file-loader": "^6.2.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.16",
     "typescript": "^5.2.2",
