--- a/clothing-store/package.json
+++ b/clothing-store/package.json
@@ -20,6 +20,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
     "react-slick": "^0.30.2",
+    "react-spring": "^9.7.5",
     "react-three-fiber": "^6.0.13",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.1.14",
