--- a/clothing-store/package.json
+++ b/clothing-store/package.json
@@ -13,6 +13,7 @@
     "@react-spring/three": "^9.7.5",
     "@react-three/drei": "^9.120.3",
     "@react-three/fiber": "^8.17.10",
+    "@reduxjs/toolkit": "^2.5.0",
     "@types/react-slick": "^0.23.13",
     "axios": "^1.7.7",
     "react": "^18.3.1",
