--- a/clothing-store/package.json
+++ b/clothing-store/package.json
@@ -16,6 +16,8 @@
     "@reduxjs/toolkit": "^2.5.0",
     "@types/react-slick": "^0.23.13",
     "axios": "^1.7.7",
+    "jotai": "^2.10.4",
+    "leva": "^0.9.35",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
