--- a/clothing-store/tsconfig.json
+++ b/clothing-store/tsconfig.json
@@ -1,5 +1,12 @@
 {
   "files": [],
+  "compilerOptions": {
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "moduleResolution": "node",
+    "baseUrl": "./src"
+  },
   "references": [
     {
       "path": "./tsconfig.app.json"
