--- a/clothing-store/package.json
+++ b/clothing-store/package.json
@@ -23,6 +23,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
     "react-slick": "^0.30.2",
+    "react-spinners": "^0.15.0",
     "react-spring": "^9.7.5",
     "react-three-fiber": "^6.0.13",
     "slick-carousel": "^1.8.1",
